docs(swagger): add docs for login
